<resources>
    <string name="app_name">Nock Academy Coding Test 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="menu_price_format">%s THB</string>
    <string name="menu_image">Menu Image</string>
    <string name="checkmark_icon">Checkmark Icon</string>
    <string name="next">Next</string>
    <string name="total_price_0_00">Total Price: $0.00</string>
</resources>